force-app/main/default/objects/Invoice__c/fields/ABRA_Flexi_Id__c.field-meta.xml
<CustomField>
    <fullName>ABRA_Flexi_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique identifier in abra flexi.</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique identifier in abra flexi.</inlineHelpText>
    <label>ABRA Flexi Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>