force-app/main/default/objects/Invoice__c/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Billing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>