force-app/main/default/objects/Invoice__c/fields/Date_of_Taxable_Supply__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Taxable_Supply__c</fullName>
    <label>Date of Taxable Supply</label>
    <required>true</required>
    <type>Date</type>
</CustomField>