force-app/main/default/objects/Invoice__c/fields/Debit_Note__c.field-meta.xml
<CustomField>
    <fullName>Debit_Note__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is checked when this is considered as a Debit Note.</description>
    <inlineHelpText>Is checked when this is considered as a Debit Note.</inlineHelpText>
    <label>Debit Note</label>
    <type>Checkbox</type>
</CustomField>