force-app/main/default/objects/Invoice__c/fields/Invoice_BC_Id__c.field-meta.xml
<CustomField>
    <fullName>Invoice_BC_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Invoice BC Id</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>