force-app/main/default/objects/Invoice__c/fields/Reference_Order__c.field-meta.xml
<CustomField>
    <fullName>Reference_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Reference Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>