force-app/main/default/objects/Invoice__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Determines whether record is Invoice or Credit Note.</description>
    <inlineHelpText>Determines whether record is Invoice or Credit Note.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Credit Note</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>