force-app/main/default/objects/Invoice__c/listViews/AllInvoices.listView-meta.xml
<ListView>
    <fullName>AllInvoices</fullName>
    <columns>NAME</columns>
    <columns>Total_Amount__c</columns>
    <columns>Issue_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Invoices</label>
</ListView>