force-app/main/default/objects/Invoice__c/listViews/MyInvoices.listView-meta.xml
<ListView>
    <fullName>MyInvoices</fullName>
    <columns>NAME</columns>
    <columns>Total_Amount__c</columns>
    <columns>Issue_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Invoices</label>
</ListView>